--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
   </head>
   <body>
+  	<!-- Webpack bundles js files into bundle.js -->
   	<script type="text/javascript" src="bundle.js" charset="utf-8"></script>
   </body>
 </html>
